fixed chapter icon not showing, request personal note action commented out for now

--- a/src/assets/scss/components/02_molecules/pageComponents.scss
+++ b/src/assets/scss/components/02_molecules/pageComponents.scss
@@ -346,7 +346,7 @@
                         display: inline-block;
                         position: absolute;
                         left: 65px;
-                        bottom: 7px;
+                        bottom: 5px;
                         line-height: 40px;
                         color: $white;
                     }
@@ -456,7 +456,7 @@
                         display: inline-block;
                         position: absolute;
                         left: 65px;
-                        bottom: 7px;
+                        bottom: 5px;
                         line-height: 40px;
                         color: $white;
                     }
